syntax = "proto3";

package auth;

// Auth service gRPC definition
service AuthService {
  // Validate an access token â€” used by API Gateway and other services
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

  // Get user info from a token (lightweight)
  rpc GetTokenUser(GetTokenUserRequest) returns (GetTokenUserResponse);
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
  string role = 4;
}

message GetTokenUserRequest {
  string access_token = 1;
}

message GetTokenUserResponse {
  string user_id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
}
